# ChimeraLM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  eval.py  getforp2.sh  pyproject.toml  train.py
.github/workflows/: release-python.yml
chimera/: __init__.py  __main__.py
chimera/data/: __init__.py  bam.py  fq.py  mnist_datamodule.py  only_fq.py  tokenizer.py
chimera/data/components/: __init__.py
chimera/explain/: motif.py
chimera/models/: __init__.py  basic_module.py  callbacks.py  cnn.py  mnist_module.py  transformer.py
chimera/models/components/: cnn.py  hyena.py  local_attention.py  mamba.py  striped_hyena.py  titans.py  transformer.py
chimera/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
chimeralm/: __init__.py  __main__.py  ui.py
chimeralm/data/: bam.py  fq.py  only_fq.py  tokenizer.py
chimeralm/explain/: __init__.py
chimeralm/models/: __init__.py  basic_module.py  callbacks.py  lm.py
chimeralm/models/components/: cnn.py  hyena.py  simple_dense_net.py  transformer.py
chimeralm/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
configs/: eval.yaml
configs/callbacks/: write.yaml
configs/data/: bam.yaml  fq.yaml
configs/experiment/: cnn.yaml  hyena.yaml  mamba.yaml  mambasp.yaml  transformer.yaml
configs/hparams_search/: mambasp_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: caduceus.yaml  cnn.yaml  hyena.yaml  mamba.yaml  mambasp.yaml  transformer.yaml
notebooks/: attention.ipynb  data.ipynb  dea.ipynb  model.ipynb  train.ipynb
scripts/: collectp2.sh  construct.py  construct_train.py  data.py  extract.py  get_result_from_predictions.py  getforp2.sh  model2hub.py  predict_with_sv.py  read_len.py  run.py  run_eval.sh  run_train.sh  runforp2.sh  select.py  split.py  train.slurm
src/: lib.rs  predict.rs  python.rs
tests/: test_data_module.py  test_deepbiop.py  test_tokenzier.py
tests/data/: test_chimric_reads.bam.bai  test_predict.fq  test_predict.parquet  tests.parquet
