[package]
name = "chimeralm"
version = "0.1.0"
edition = "2024"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "chimeralm"
crate-type = ["cdylib", "rlib"]

[dependencies]
deepbiop = { git = "https://github.com/cauliyang/DeepBioP", branch = "feat", features = [
    "fastq",
    "bam",
    "utils",
] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
thiserror = "2.0"
anyhow = "1.0"
walkdir = { version = "2.5" }
rayon = { version = "1.10" }
pyo3 = { version = "0.23.5", features = [
    "abi3-py310",
    "extension-module",
    "anyhow",
] }

ctrlc = "3.4"
log = "0.4"
pyo3-log = "0.12"
noodles = { version = "0.99.0", features = [
    "bgzf",
    "core",
    "csi",
    "fasta",
    "fastq",
    "sam",
    "bam",
] }
bio = "2.3"

ahash = "0.8.12"
numpy = "0.23"
ndarray = { version = "0.16", features = ["serde", "rayon"] }
num-traits = { version = "0.2" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.9"
rand_distr = "0.5"
bitvec = "1.0"
itertools = "0.14.0"
derive_builder = "0.20"
lexical = "7.0"
bstr = "1.12.0"
lazy_static = "1.5.0"
tempfile = "3.20"
parquet = "55.1"
arrow = "55.1"
colored = "3"
textwrap = "0.16"
flate2 = { version = "1.1.2", features = ["zlib-ng"], default-features = false }

# binaries
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11"
stringzilla = ">=3"
human-panic = "2.0"


[build-dependencies]
pyo3-build-config = "0.25"
